LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/API_Logger__c.object-meta.xml
<CustomObject>
    <label>API Logger</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>API Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>