LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Status</label>
    <type>Checkbox</type>
</CustomField>