LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Logger</label>
    <referenceTo>API_Logger__c</referenceTo>
    <relationshipLabel>Child Logs</relationshipLabel>
    <relationshipName>API_Loggers</relationshipName>
    <type>Lookup</type>
</CustomField>