LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>