LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/fields/Total_Retries__c.field-meta.xml
<CustomField>
    <fullName>Total_Retries__c</fullName>
    <label>Total Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>