LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/fields/Totl_Count_Of_Callout__c.field-meta.xml
<CustomField>
    <fullName>Totl_Count_Of_Callout__c</fullName>
    <label>Totl Count Of Callout</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>