LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Final_Status__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Code__c</field>
        <operation>notEqual</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Biplow</value>
    </filters>
    <label>All</label>
</ListView>