LinKreta_POC_Repository/force-app/main/default/objects/API_Logger__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>End_Point__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Record_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>